--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -24,12 +24,18 @@
     with_items:
     - en_US.UTF-8
     - fr_FR.UTF-8
+    tags:
+    - always
+    - locale
 
   - name: "settings | locale"
     template:
       src: etc/default/locale.j2
       dest: /etc/default/locale
       mode: 0644
+    tags:
+    - always
+    - locale
 
   - name: "settings | auto-start folder"
     file:
