--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -774,7 +774,7 @@
 
   - name: "utils | Misc :: installation"
     apt:
-      name: [ 'figlet', 'lolcat', 'boxes', 'xclip', 'xsel', 'tree', 'jq' ]
+      name: [ 'figlet', 'lolcat', 'boxes', 'xclip', 'xsel', 'tree', 'jq', 'libnss3-tools' ]
       state: latest
     tags:
     - utils
@@ -825,7 +825,7 @@
     - utils
     - tmux
 
-  - name: "utils | Httpie :: remove old version"
+  - name: "utils | Httpie :: remove os version"
     apt:
       name: httpie
       state: absent
@@ -833,13 +833,23 @@
     - utils
     - httpie
 
+  - name: "utils | Httpie :: check"
+    command: http --version
+    ignore_errors: yes
+    register: httpie_version
+    changed_when: false
+    tags:
+    - utils
+    - httpie
+
   - name: "utils | Httpie :: installation"
     pip:
-      name: https://github.com/jakubroztocil/httpie/archive/2.1.0.tar.gz
+      name: https://github.com/jakubroztocil/httpie/archive/{{ packages.httpie.version }}.tar.gz
       executable: pip3
       extra_args: --upgrade
       umask: "0022"
       state: latest
+    when: httpie_version is failed or httpie_version.stdout != packages.httpie.version
     tags:
     - utils
     - httpie
