--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -792,13 +792,22 @@
       creates: "{{ homedir }}/.vscode/extensions/{{ item }}-*/package.json"
     become: "{{ username }}"
     with_items:
+      # Bookmarks
       - "alefragnani.bookmarks"
+      # Bracket Pair Colorizer
       - "coenraads.bracket-pair-colorizer"
-      - "oderwat.indent-rainbow"
+      # Editor Config
       - "editorconfig.editorconfig"
+      # Indent Rainbow
+      - "oderwat.indent-rainbow"
+      # Markdown Paste
+      - "telesoho.vscode-markdown-paste-image"
+      # Markdown Preview
       - "searking.preview-vscode"
+      # Print Code
+      - "nobuhito.printcode"
+      # Material Icon Theme
       - "pkief.material-icon-theme"
-      - "ckolkman.vscode-postgres"
     when: wsl == "0"
     tags:
     - editor
