--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -791,25 +791,7 @@
     args:
       creates: "{{ homedir }}/.vscode/extensions/{{ item }}-*/package.json"
     become: "{{ username }}"
-    with_items:
-      # Bookmarks
-      - "alefragnani.bookmarks"
-      # Bracket Pair Colorizer
-      - "coenraads.bracket-pair-colorizer"
-      # Editor Config
-      - "editorconfig.editorconfig"
-      # Indent Rainbow
-      - "oderwat.indent-rainbow"
-      # Markdown Paste
-      - "telesoho.vscode-markdown-paste-image"
-      # Markdown Preview
-      - "searking.preview-vscode"
-      # Print Code
-      - "nobuhito.printcode"
-      # Material Icon Theme
-      - "pkief.material-icon-theme"
-      # TODO highlither
-      - "wayou.vscode-todo-highlight"
+    with_items: "{{ vscode.extensions }}"
     when: wsl == "0"
     tags:
     - editor
