--- a/roles/httpie/tasks/main.yml
+++ b/roles/httpie/tasks/main.yml
@@ -22,7 +22,7 @@
     executable: pip3
     extra_args: --upgrade
     umask: "0022"
-    state: latest
+    state: present
   when: httpie_version is failed or httpie_version.stdout != version
   tags:
   - utils
