--- a/roles/insomnia/tasks/main.yml
+++ b/roles/insomnia/tasks/main.yml
@@ -20,7 +20,7 @@
 - name: "utils | Insomnia :: installation"
   apt:
     name: insomnia
-    state: latest
+    state: present
   tags:
   - utils
   - insomnia
