--- a/roles/kubectl/tasks/main.yml
+++ b/roles/kubectl/tasks/main.yml
@@ -20,7 +20,7 @@
 - name: "kubernetes | kubectl :: installation"
   apt:
     name: kubectl
-    state: latest
+    state: present
   tags:
   - kubernetes
   - kubectl
