--- a/roles/node/tasks/main.yml
+++ b/roles/node/tasks/main.yml
@@ -20,7 +20,7 @@
 - name: "lang | Node :: installation"
   apt:
     name: nodejs
-    state: latest
+    state: present
   tags:
   - lang
   - nodejs
