--- a/roles/flameshot/tasks/main.yml
+++ b/roles/flameshot/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: "special | Flameshot :: installation"
   apt:
     name: flameshot
-    state: latest
+    state: present
   when: wsl == "0"
   tags:
   - never
