--- a/roles/teamviewer/tasks/main.yml
+++ b/roles/teamviewer/tasks/main.yml
@@ -23,7 +23,7 @@
 - name: "special | Teamviewer :: installation"
   apt:
     name: teamviewer
-    state: latest
+    state: present
   when: wsl == "0"
   tags:
   - never
