--- a/roles/vlc/tasks/main.yml
+++ b/roles/vlc/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: "special | VLC :: installation"
   apt:
     name: vlc
-    state: latest
+    state: present
   when: wsl == "0"
   tags:
   - never
