--- a/roles/terraform/tasks/main.yml
+++ b/roles/terraform/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: "kubernetes | terraform :: check"
+- name: "get installed version"
   command: terraform version
   ignore_errors: yes
   register: terraform_version
@@ -8,7 +8,7 @@
   - kubernetes
   - terraform
 
-- name: "kubernetes | terraform :: download"
+- name: "download needed version"
   get_url:
     url: https://releases.hashicorp.com/terraform/{{ version }}/terraform_{{ version }}_linux_amd64.zip
     dest: "{{ dlcache }}/terraform-{{ version }}.tar.gz"
@@ -18,7 +18,7 @@
   - kubernetes
   - terraform
 
-- name: "kubernetes | terraform :: unarchive"
+- name: "unarchive"
   unarchive:
     src: "{{ dlcache }}/terraform-{{ version }}.tar.gz"
     dest: /usr/local/bin
