--- a/roles/k9s/tasks/main.yml
+++ b/roles/k9s/tasks/main.yml
@@ -26,11 +26,20 @@
     src: "{{ dlcache }}/k9s-{{ version }}.tar.gz"
     dest: /usr/local/bin
     copy: no
-    mode: 0755
     exclude:
     - LICENSE
     - README.md
   when: k9s_version is failed or version not in k9s_version.stdout_lines[0]
+  tags:
+  - kubernetes
+  - k9s
+
+- name: "kubernetes | k9s :: permission"
+  file:
+    path: /usr/local/bin/k9s
+    owner: root
+    group: root
+    mode: '0755'
   tags:
   - kubernetes
   - k9s
